# rustclr

./: .gitignore  Cargo.toml  Justfile  README.md  rustfmt.toml
.github/workflows/: ci.yml
cli/src/: main.rs
examples/Powershell/: main.rs
examples/Writeline/: main.rs
src/: clr.rs  com.rs  error.rs  host_control.rs  lib.rs  pwsh.rs  string.rs  variant.rs
src/clr/: com.rs  file.rs  hosting.rs  mod.rs  runtime.rs
src/com/: appdomain.rs  assembly.rs  assembly_identity.rs  assembly_manager.rs  assembly_store.rs  iclrmetahost.rs  iclrruntimehost.rs  iclrruntimeinfo.rs  icorruntimehost.rs  ienumunknown.rs  ihostcontrol.rs  ipropertyinfo.rs  itype.rs  methodinfo.rs  mod.rs
src/data/: appdomain.rs  assembly.rs  assembly_identity.rs  assembly_manager.rs  assembly_store.rs  iclrmetahost.rs  iclrruntimehost.rs  iclrruntimeinfo.rs  icorruntimehost.rs  ienumunknown.rs  ihostcontrol.rs  ipropertyinfo.rs  itype.rs  methodinfo.rs  mod.rs
src/utils/: file.rs  mod.rs  safearray.rs
tests/: Cargo.toml
tests/src/: lib.rs
